fixed jumpy loading icon on small devices

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -11,7 +11,7 @@ table td{
 
 .spinner     {
 width: 14px;
-height:18px;
+height:20px;
 -webkit-animation-name: spin;
 -webkit-animation-duration: 1500ms;
 -webkit-animation-iteration-count: infinite;
